...
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/layout_notification_info_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/layout_notification_info_large_icon"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="?android:textColorSecondary"
                android:textSize="@dimen/small_text_size"
                tools:text="Pushed at 20/10/20022" />

...
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    layout="@layout/layout_small_icon_app"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/layout_notification_info_sub_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/layout_notification_info_large_icon"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="?android:textColorSecondary"
...
                android:visibility="gone"
                app:shapeAppearanceOverlay="@style/Theme.Notisaver.IconShapeAppearanceOverlay.Circle"
                tools:src="@mipmap/ic_launcher"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/layout_notification_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_notification_info_header_container"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_toStartOf="@+id/layout_notification_info_large_icon"
...
                android:textSize="@dimen/secondary_text_size"
                android:textStyle="bold"
                tools:text="Kết nối mạng wifi đang mở aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/layout_notification_info_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_notification_info_title"
            android:layout_marginTop="8dp"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/secondary_text_size"
            tools:text="I prefer the second approach this because you are going to refresh the background activity once the user logins. Also the whole experience will be faster since you don't have to wait for your background activity to load." />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/layout_notification_info_big_picture"
            android:layout_width="match_parent"
            android:layout_height="252dp"
            android:layout_below="@+id/layout_notification_info_content_text"
            android:layout_marginTop="14dp"
            android:antialias="true"
            android:scaleType="centerCrop"
...
