...
    <string name="app_version_title">App Version</string>

    <string name="all_app">All of the applications</string>

    <string name="turn_on">Turn on</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="canceling">Canceling…</string>

    <string name="empty_list">Empty</string>

    <string name="ok">OK</string>
    <string name="action_continue">Continue</string>
    <string name="dismiss">Dismiss</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="selected">Selected %1$d</string>
    <string name="password">Password</string>
...
        <item quantity="one">%1$d notification are moved to history</item>
        <item quantity="other">%1$d notifications are moved to history</item>
    </plurals>
    <!-- notification display -->

    <!-- app option -->
    <string name="option_remove_notification_short">Remove</string>
    <string name="option_remove_notification">Clear all notifications</string>
    <string name="option_open_app_short">Open</string>
    <string name="option_open_app">Open App</string>
    <string name="option_open_setting_short">Setting</string>
    <string name="option_open_setting">Open App\'s setting</string>
    <string name="option_exclude_app_short">Exclude</string>
    <string name="option_include_app_short">Include</string>
    <string name="option_delete_app">Delete app</string>
    <string name="option_enable_cancel_short">Enable clean notification</string>
    <string name="option_disable_cancel">Disable clean notification</string>
    <string name="option_enable_log_ongoing">Enable log ongoing</string>
    <string name="option_disable_log_ongoing">Disable log ongoing</string>
    <!-- app option -->
...
