...
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingTop="8dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bottom_sheet_notification_info_list_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:nestedScrollingEnabled="false"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_option_notification" />
...
                            android:layout_weight="1"
                            android:text="@string/mute_notification"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="@dimen/primary_text_size" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/bottom_sheet_notification_info_clean_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

...
                            android:layout_weight="1"
                            android:text="@string/pre_log_ongoing"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="@dimen/primary_text_size" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/bottom_sheet_notification_info_log_ongoing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

...
